# sxplayer

./: .clangd  .gitignore  CHANGELOG.md  Makefile  README.md  TODO  api.c  async.c  async.h  avc.c  avc.h  bufcount.c  bufcount.h  dec.c  decoder_ffmpeg.c  decoder_vt.c  decoders.c  decoders.h  decoding.c  decoding.h  demuxing.c  demuxing.h  filtering.c  filtering.h  hwaccel_vt.c  internal.h  libsfxmp.pc.tpl  libsxplayer.darwin.symexport  libsxplayer.pc.tpl  libsxplayer.symexport  libsxplayer.ver  log.c  log.h  main.c  make-release.sh  meson.build  meson_options.txt  mod_decoding.c  mod_decoding.h  mod_demuxing.c  (+16 more)
.github/: meson-android-aarch64.ini  meson-android-arm.ini  meson-android-x86_64.ini  meson-ios-arm64.ini  meson-ios-x86_64.ini
.github/workflows/: ci_android.yml  ci_dep_build.yml  ci_ffmpeg_build.yml  ci_ios.yml  ci_linux.yml  ci_mac.yml  ci_win.yml
src/: api.c  async.c  async.h  decoder_ffmpeg.c  decoder_vt.c  decoders.c  decoders.h  log.c  log.h  mod_decoding.c  mod_demuxing.h  mod_filtering.c  opts.h  pthread_compat.h  sxplayer.c  sxplayer.h.in  sxplayer.hpp  utils.c
tests/: test_audio.c  test_audio_seek.c  test_comb.c  test_high_refresh_rate.c  test_image.c  test_image_seek.c  test_microseconds.c  test_misc_events.c  test_next_frame.c  test_notavail_file.c  test_seek_after_eos.c
